add popup for racket

--- a/index.html
+++ b/index.html
@@ -215,6 +215,15 @@
         <span class="price">价格：990 元</span>
         <a target="_blank" href="http://item.jd.com/1543274075.html">立即购买</a>
     </div>
+    <div class="detail-box for_racket">
+        <button class="close">关闭</button>
+        <h3>LT12限量系列网球拍</h3>
+        <div class="pic">
+            <img src="images/product/07.png" alt="">
+        </div>
+        <span class="price">价格：4990 元</span>
+        <a target="_blank" href="http://item.jd.com/1543287724.html">立即购买</a>
+    </div>
     <!-- PRODUCT DETAIL -->
     <!-- PRODUCT DETAIL END -->
 
