expend close button click area

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         $(".click-fix-5").css({
             width: ww*0.13,
             height: ww*0.2,
-            bottom: ww*0.22,
+            bottom: ww*0.2,
             left: ww*0.41
         });
         $(".click-fix-6").css({
@@ -477,13 +477,13 @@
         });
         $(".click-mask-7").css({
             width: ww*0.07,
-            height: ww*0.1,
+            height: ww*0.13,
             bottom: 0,
             left: ww*0.2
         });
         $(".click-mask-8").css({
             width: ww*0.06,
-            height: ww*0.1,
+            height: ww*0.13,
             bottom: 0,
             left: ww*0.46
         });
@@ -526,6 +526,19 @@
         setContentSize();
     }).resize();
 
+
+
+    $(".racket").on('touchstart',function(){
+        if ($('.main').hasClass('showing')) {
+            return;
+        }
+        $('.main').addClass('showing');
+
+        $(".detail-box").removeClass("show");
+        $(".col").addClass("blur");
+        $(".col").removeClass("active");
+        $(".detail-box.for_racket").addClass("show");
+    });
 
 </script>
 <script type="text/javascript" src="js/common.js"></script>
