change img srcset paprameter

--- a/index.html
+++ b/index.html
@@ -57,78 +57,78 @@
                                 <div _index="0" class="col" id="man-1">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN1-3.png" srcset="images/model/MAN1-3.png 320w, images/model/MAN1-3x2.png 640w, images/model/MAN1-3x3.png 1024w" alt="photo jc nb">
+                                            <img src="images/model/MAN1-3.png" srcset="images/model/MAN1-3.png 250w, images/model/MAN1-3x2.png 400w, images/model/MAN1-3x3.png 660w" alt="photo jc nb">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN1-5.png" srcset="images/model/MAN1-5.png 320w, images/model/MAN1-5x2.png 640w, images/model/MAN1-5x3.png 1024w" alt="">
+                                            <img src="images/model/MAN1-5.png" srcset="images/model/MAN1-5.png 250w, images/model/MAN1-5x2.png 400w, images/model/MAN1-5x3.png 660w" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="jc" class="photo-viensla" src="images/model/MAN1-1.png" srcset="images/model/MAN1-1.png 320w, images/model/MAN1-1x2.png 640w, images/model/MAN1-1x3.png 1024w" alt="photo jc follomaton">
+                                            <img id="jc" class="photo-viensla" src="images/model/MAN1-1.png" srcset="images/model/MAN1-1.png 250w, images/model/MAN1-1x2.png 400w, images/model/MAN1-1x3.png 660w" alt="photo jc follomaton">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="1" class="col" id="man-2">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN2-3.png" srcset="images/model/MAN2-3.png 320w, images/model/MAN2-3x2.png 640w, images/model/MAN2-3x3.png 1024w" alt="photo nico nb">
+                                            <img src="images/model/MAN2-3.png" srcset="images/model/MAN2-3.png 250w, images/model/MAN2-3x2.png 400w, images/model/MAN2-3x3.png 660w" alt="photo nico nb">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN2-5.png" srcset="images/model/MAN2-5.png 320w, images/model/MAN2-5x2.png 640w, images/model/MAN2-5x3.png 1024w" alt="">
+                                            <img src="images/model/MAN2-5.png" srcset="images/model/MAN2-5.png 250w, images/model/MAN2-5x2.png 400w, images/model/MAN2-5x3.png 660w" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="niko" class="photo-viensla" src="images/model/MAN2-1.png" srcset="images/model/MAN2-1.png 320w, images/model/MAN2-1x2.png 640w, images/model/MAN2-1x3.png 1024w" alt="photo nico follomaton">
+                                            <img id="niko" class="photo-viensla" src="images/model/MAN2-1.png" srcset="images/model/MAN2-1.png 250w, images/model/MAN2-1x2.png 400w, images/model/MAN2-1x3.png 660w" alt="photo nico follomaton">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="2" class="col" id="man-3">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN3-3.png" srcset="images/model/MAN3-3.png 320w, images/model/MAN3-3x2.png 640w, images/model/MAN3-3x3.png 1024w" alt="photo fred nb">
+                                            <img src="images/model/MAN3-3.png" srcset="images/model/MAN3-3.png 250w, images/model/MAN3-3x2.png 400w, images/model/MAN3-3x3.png 660w" alt="photo fred nb">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN3-5.png" srcset="images/model/MAN3-5.png 320w, images/model/MAN3-5x2.png 640w, images/model/MAN3-5x3.png 1024w" alt="">
+                                            <img src="images/model/MAN3-5.png" srcset="images/model/MAN3-5.png 250w, images/model/MAN3-5x2.png 400w, images/model/MAN3-5x3.png 660w" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="fred" class="photo-viensla" src="images/model/MAN3-1.png" srcset="images/model/MAN3-1.png 320w, images/model/MAN3-1x2.png 640w, images/model/MAN3-1x3.png 1024w" alt="photo fred follomaton">
+                                            <img id="fred" class="photo-viensla" src="images/model/MAN3-1.png" srcset="images/model/MAN3-1.png 250w, images/model/MAN3-1x2.png 400w, images/model/MAN3-1x3.png 660w" alt="photo fred follomaton">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="3" class="col" id="man-4">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN4-3.png" srcset="images/model/MAN4-3.png 320w, images/model/MAN4-3x2.png 640w, images/model/MAN4-3x3.png 1024w" alt="photo fred nb">
+                                            <img src="images/model/MAN4-3.png" srcset="images/model/MAN4-3.png 250w, images/model/MAN4-3x2.png 400w, images/model/MAN4-3x3.png 660w" alt="photo fred nb">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN4-5.png" srcset="images/model/MAN4-5.png 320w, images/model/MAN4-5x2.png 640w, images/model/MAN4-5x3.png 1024w" alt="">
+                                            <img src="images/model/MAN4-5.png" srcset="images/model/MAN4-5.png 250w, images/model/MAN4-5x2.png 400w, images/model/MAN4-5x3.png 660w" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="fred" class="photo-viensla" src="images/model/MAN4-1.png" srcset="images/model/MAN4-1.png 320w, images/model/MAN4-1x2.png 640w, images/model/MAN4-1x3.png 1024w" alt="photo fred follomaton">
+                                            <img id="fred" class="photo-viensla" src="images/model/MAN4-1.png" srcset="images/model/MAN4-1.png 250w, images/model/MAN4-1x2.png 400w, images/model/MAN4-1x3.png 660w" alt="photo fred follomaton">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="4" class="col" id="man-5">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN5-3.png" srcset="images/model/MAN5-3.png 320w, images/model/MAN5-3x2.png 640w, images/model/MAN5-3x3.png 1024w" alt="photo nico nb">
+                                            <img src="images/model/MAN5-3.png" srcset="images/model/MAN5-3.png 250w, images/model/MAN5-3x2.png 400w, images/model/MAN5-3x3.png 660w" alt="photo nico nb">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN5-5.png" srcset="images/model/MAN5-5.png 320w, images/model/MAN5-5x2.png 640w, images/model/MAN5-5x3.png 1024w" alt="">
+                                            <img src="images/model/MAN5-5.png" srcset="images/model/MAN5-5.png 250w, images/model/MAN5-5x2.png 400w, images/model/MAN5-5x3.png 660w" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="niko" class="photo-viensla" src="images/model/MAN5-1.png" srcset="images/model/MAN5-1.png 320w, images/model/MAN5-1x2.png 640w, images/model/MAN5-1x3.png 1024w" alt="photo nico follomaton">
+                                            <img id="niko" class="photo-viensla" src="images/model/MAN5-1.png" srcset="images/model/MAN5-1.png 250w, images/model/MAN5-1x2.png 400w, images/model/MAN5-1x3.png 660w" alt="photo nico follomaton">
                                         </div>
                                     </div>
                                 </div>
                                 <div _index="5" class="col" id="man-6">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN6-3.png" srcset="images/model/MAN6-3.png 320w, images/model/MAN6-3x2.png 640w, images/model/MAN6-3x3.png 1024w" alt="photo jc nb">
+                                            <img src="images/model/MAN6-3.png" srcset="images/model/MAN6-3.png 250w, images/model/MAN6-3x2.png 400w, images/model/MAN6-3x3.png 660w" alt="photo jc nb">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN6-5.png" srcset="images/model/MAN6-5.png 320w, images/model/MAN6-5x2.png 640w, images/model/MAN6-5x3.png 1024w" alt="">
+                                            <img src="images/model/MAN6-5.png" srcset="images/model/MAN6-5.png 250w, images/model/MAN6-5x2.png 400w, images/model/MAN6-5x3.png 660w" alt="">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="jc" class="photo-viensla" src="images/model/MAN6-1.png" srcset="images/model/MAN6-1.png 320w, images/model/MAN6-1x2.png 640w, images/model/MAN6-1x3.png 1024w" alt="photo jc follomaton">
+                                            <img id="jc" class="photo-viensla" src="images/model/MAN6-1.png" srcset="images/model/MAN6-1.png 250w, images/model/MAN6-1x2.png 400w, images/model/MAN6-1x3.png 660w" alt="photo jc follomaton">
                                         </div>
                                     </div>
                                 </div>
@@ -262,7 +262,7 @@
         </div>
         <footer>
             <a class="read-tc" target="_blank" href="javascript:;">法律声明条款</a>
-            <a target="_blank" href="javascript:;">ICP</a>
+            <a target="_blank" href="javascript:;">沪ICP备13005267号-17</a>
         </footer>
     </div>
     <!-- END PORTRAIT -->
