--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
         <h2><a href="javascript:;">LACOSTE LOOKBOOK</a></h2>
         <nav>
             <ul>
-                <li><a href="javascript:;">读爱网球</a>
+                <li><a class="red" href="javascript:;">读爱网球</a>
                 </li>
-                <li><a href="javascript:;">爱情对对碰</a>
+                <li><a class="green" href="javascript:;">爱情对对碰</a>
                 </li>
-                <li><a href="javascript:;">挑战快拍手</a>
+                <li><a class="blue" href="javascript:;">挑战快拍手</a>
                 </li>
-                <li><a href="javascript:;">0元飞巴黎</a>
+                <li><a class="grey" href="javascript:;">0元飞巴黎</a>
                 </li>
-                <li><a href="javascript:;">产品型录</a>
+                <li><a class="red" href="javascript:;">产品型录</a>
                 </li>
-                <li><a href="javascript:;">趣扫红土场</a>
+                <li><a class="green" href="javascript:;">趣扫红土场</a>
                 </li>
-                <li><a href="javascript:;">查找活动门店</a>
+                <li><a class="blue" href="javascript:;">查找活动门店</a>
                 </li>
-                <li><a href="javascript:;">京东旗舰店</a>
+                <li><a class="grey" href="javascript:;">京东旗舰店</a>
                 </li>
             </ul>
         </nav>
