update product images and info

--- a/index.html
+++ b/index.html
@@ -195,16 +195,16 @@
             <img src="images/product/04.png" alt="">
         </div>
         <span class="price">价格：590 元</span>
-        <a target="_blank" href="http://item.jd.com/1543278289.html">立即购买</a>
+        <a target="_blank" href="http://item.jd.com/1570980480.html">立即购买</a>
     </div>
     <div class="detail-box for_man-5">
         <button class="close">关闭</button>
-        <h3>LT12限量系列黑色T恤衫</h3>
+        <h3>LT12限量系列深蓝色T恤衫</h3>
         <div class="pic">
             <img src="images/product/05.png" alt="">
         </div>
         <span class="price">价格：590 元</span>
-        <a target="_blank" href="http://item.jd.com/1543278289.htm">立即购买</a>
+        <a target="_blank" href="http://item.jd.com/1494360490.html">立即购买</a>
     </div>
     <div class="detail-box for_man-6">
         <button class="close">关闭</button>
@@ -222,7 +222,7 @@
             <img src="images/product/07.png" alt="">
         </div>
         <span class="price">价格：4990 元</span>
-        <a target="_blank" href="http://item.jd.com/1543287724.html">立即购买</a>
+        <a target="_blank" href="http://item.jd.com/1552558895.html">立即购买</a>
     </div>
     <!-- PRODUCT DETAIL -->
     <!-- PRODUCT DETAIL END -->
