--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         <div class="racket"><img src="css/img/racket.png" alt=""></div>
         <div id="tennisball" style="z-index:999;position:absolute;">
             <img style="width:30px;height:30px;" src="css/img/tennis.png">
+            <img style="display: none;width:30px;height:30px;" src="css/img/tennis.gif">
         </div>
     </section>
     <div class="main-mask"></div>
