update tennisball position and size

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         <div class="racket"><img src="css/img/racket.png" alt=""></div>
     </section>
     <div id="tennisball" style="z-index:280;position:absolute;">
-        <img style="width:30px;height:30px;" src="css/img/tennis.png">
-        <img style="display: none;width:30px;height:30px;" src="css/img/tennis.gif">
+        <img src="css/img/tennis.png">
+        <img style="display:none" src="css/img/tennis.gif">
     </div>
     <div class="main-mask"></div>
     <!-- End Page Content -->
