update the original position of tennisball

--- a/index.html
+++ b/index.html
@@ -493,6 +493,10 @@
         $(".racket").css({
             width: ww*0.11
         });
+        $("#tennisball").css({
+            left: ww-60-0.048*ww+22,
+            top: wh-ww*0.32
+        });
 
         /*detail-box*/
         $(".detail-box").css({
