--- a/index_front.html
+++ b/index_front.html
@@ -379,7 +379,7 @@
         if(ww>980){
             $("body").css({width: ww});
 
-            $("h1.logo").css({width: ww*0.08, marginLeft: -ww*0.04})
+            $("h1.logo").css({width: ww*0.08, marginLeft: -ww*0.04});
             
             /*main*/
             $(".main").css({width: ww});
@@ -646,6 +646,7 @@
 
         if(wh>550) {
             $("body").css({height: wh});
+            $("h1.logo").css({top: wh*0.036});
             $(".main").css({height: wh});
             $(".main-mask").css({height: wh});
             $(".intro-partie").css({height: wh});
@@ -659,6 +660,7 @@
 
         if(wh<550) {
             $("body").css({height: 550});
+            $("h1.logo").css({top: 550*0.036});
             $(".main").css({height: 550});
             $(".main-mask").css({height: 550});
             $(".intro-partie").css({height: 550});
