add top value for logo

--- a/index_front.html
+++ b/index_front.html
@@ -507,6 +507,7 @@
         });
 
         $("body").css({height: wh});
+        $("h1.logo").css({top: wh*0.036});
         $(".main").css({height: wh});
         $(".main-mask").css({height: wh});
         $(".intro-partie").css({height: wh});
