update menu link

--- a/index_front.html
+++ b/index_front.html
@@ -15,13 +15,13 @@
         <h2><a href="javascript:;">LACOSTE LOOKBOOK</a></h2>
         <nav>
             <ul>
-                <li><a class="red" href="http://1111.lt12.cn/rltennis">读爱网球</a>
+                <li><a target="_blank" class="red" href="http://lt12.cn">LT12互动界面</a>
                 </li>
-                <li><a class="green" href="http://1111.lt12.cn/pong">爱情对对碰</a>
+                <li><a target="_blank" class="green" href="http://Lacoste.com.cn">LACOSTE官方网站</a>
                 </li>
-                <li><a class="blue" href="http://1111.lt12.cn/scan">挑战快拍手</a>
+                <li><a target="_blank" class="blue" href="http://mall.jd.com/view_page-21935589.html">京东旗舰店</a>
                 </li>
-                <li><a class="grey" href="http://1111.lt12.cn/info">0元飞巴黎</a>
+                <!-- <li><a class="grey" href="http://1111.lt12.cn/info">0元飞巴黎</a>
                 </li>
                 <li><a class="red" href="http://1111.lt12.cn/lookbook">产品型录</a>
                 </li>
@@ -30,7 +30,7 @@
                 <li><a class="blue" href="http://1111.lt12.cn/store">查找活动门店</a>
                 </li>
                 <li><a class="grey" href="http://mall.jd.com/view_page-21935589.html">京东旗舰店</a>
-                </li>
+                </li> -->
             </ul>
         </nav>
     </aside>
