导航框默认显示

--- a/index_front.html
+++ b/index_front.html
@@ -244,7 +244,7 @@
     <!-- END LOADING PAGE -->
 
     <!-- GAME GUIDE -->
-    <div class="game-guide show" style="display:none">
+    <div class="game-guide show">
         <div class="inner">
             <button class="close">关闭</button>
             <p>
