--- a/index_front.html
+++ b/index_front.html
@@ -155,11 +155,15 @@
     </section>
     <div class="main-mask"></div>
     <div id="tennisball">
-        <svg class="png" width="60" height="60" pointer-events="none"
+        <!-- <svg class="png" width="60" height="60" pointer-events="none"
             xmlns="css/front/tennisball.svg"
             xmlns:xlink="css/front/tennisball.svg">
             <image x="0" y="0" width="60" height="60"
               xlink:href="css/front/tennisball.svg" />
+        </svg> -->
+        <svg id="sir" height="116" width="106"
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <image x="0" y="0" height="60" width="60"  xlink:href="css/front/tennisball.svg"/>
         </svg>
         <img class="gif" style="display:none" src="css/front/tennisball.gif">
     </div>
