--- a/index_front.html
+++ b/index_front.html
@@ -161,7 +161,7 @@
             <image x="0" y="0" width="60" height="60"
               xlink:href="css/front/tennisball.svg" />
         </svg> -->
-        <svg id="sir" height="116" width="106"
+        <svg class="png" height="60" width="60"
         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <image x="0" y="0" height="60" width="60"  xlink:href="css/front/tennisball.svg"/>
         </svg>
