replace man-1 images and update bench height

--- a/index_front.html
+++ b/index_front.html
@@ -52,13 +52,13 @@
                                 <div _index="0" class="col" id="man-1">
                                     <div class="cadre-photo">
                                         <div class="first-photo" style="display:none;">
-                                            <img src="images/model/MAN1-3x3.png">
+                                            <img src="images/model_front/MAN1-3x3.png">
                                         </div>
                                         <div class="white-photo" style="display:none;">
-                                            <img src="images/model/MAN1-5x3.png">
+                                            <img src="images/model_front/MAN1-5x3.png">
                                         </div>
                                         <div class="anim-photo">
-                                            <img id="jc" class="photo-viensla" src="images/model/MAN1-1x3.png">
+                                            <img id="jc" class="photo-viensla" src="images/model_front/MAN1-1x3.png">
                                         </div>
                                     </div>
                                 </div>
@@ -478,7 +478,7 @@
             bottom: 0,
             marginLeft: -ww*0.205
         });
-        $(".bench").css({height: ww*0.113});
+        $(".bench").css({height: ww*0.119});
 
         $(".racket").css({
             width: ww*0.085,
