update svg and png of tennisball

--- a/index_front.html
+++ b/index_front.html
@@ -155,16 +155,10 @@
     </section>
     <div class="main-mask"></div>
     <div id="tennisball">
-        <!-- <svg class="png" width="60" height="60" pointer-events="none"
-            xmlns="css/front/tennisball.svg"
-            xmlns:xlink="css/front/tennisball.svg">
-            <image x="0" y="0" width="60" height="60"
-              xlink:href="css/front/tennisball.svg" />
-        </svg> -->
-        <svg class="png" height="60" width="60"
-        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg class="svg" xmlns="http://www.w3.org/2000/svg" version="1.1">
           <image x="0" y="0" height="60" width="60"  xlink:href="css/front/tennisball.svg"/>
         </svg>
+        <img src="css/front/tennisball.png" alt="" class="png">
         <img class="gif" style="display:none" src="css/front/tennisball.gif">
     </div>
     <!-- End Page Content -->
